versioned_docs/version-15.2.0/products/console/project-configuration/auth-flow/configuration.mdx
---
id: configuration
title: Configuration
sidebar_label: Configuration
---

import Schema from "@site/static/schemas/platform/auth/authtool/authtool-bff/latest/authtool_bff.schema.json"
import Example from "@site/static/schemas/platform/auth/authtool/authtool-bff/examples/example1.json"
import SchemaViewer from "@site/src/components/SchemaViewer"

:::info
This authorization flow is in **preview** and requires the **Advanced** or **Customization** section of the Console Project configuration.
:::

In order to implement both cookie-based and token-exchange patterns, two main components are involved:

- The BFF
- The API Gateway

The BFF (`authtool_bff`) handles:

- Session management
- Authorization code flow with AS
- Secure storage of tokens
- OIDC logout flow

The API Gateway (`envoy`) handles:

- Token validation
- Cookie \<-> Token exchange

```mermaid
flowchart LR
    U([User])
    C[Browser / Client]

    subgraph E[Envoy API Gateway]
      direction TB
      LUA[[1. Lua Filter]]
      JWT[[2. JWTAuthentication Filter]]
    end

    BFF[BFF /token]
    UP[(Upstream Service)]

    U --> C -->|HTTPS request| LUA
    LUA -->|calls| BFF
    BFF -->|returns token / headers| LUA
    LUA --> JWT
    JWT -->|forward| UP
    UP -->|response| C --> U
```

## Envoy API Gateway

To set up filters in Envoy, refer to [`on-request-scripts.yaml`](/products/console/api-console/advanced-section/api-gateway-envoy/extensions.md#lua-scripts)
and [`http-filters.yaml`](/products/console/api-console/advanced-section/api-gateway-envoy/extensions.md#http-filters)
in the Console Project advanced configuration for **API Gateway Envoy**.

The Lua filter that exchanges the token can be downloaded from [Mia CDN](https://cdn.mia-platform.eu/runtime/platform/auth/authtool/token-exchange/latest/init.lua)
or by specific version:

```shell
# available versions are
# -> latest
# -> 0.1.0 (=latest)
version=0.1.0
curl -o token-exchange.lua "https://cdn.mia-platform.eu/runtime/platform/auth/authtool/token-exchange/${version}/init.lua"
```

Mount the script on the envoy microservice as a configmap on path `/etc/lua/lib` as
a file named `token-exchange.lua`.

Then update `on-request-scripts.yaml` with:

```yaml
- listener_name: frontend
  body: |-
    package.path = '/etc/lua/lib/?.lua;' .. package.path
    local token_exchange = require('token-exchange')

    -- Configuration
    local config = {
      token_service_cluster = "authtool-bff",
      token_service_endpoint = "/bff/token",
      session_cookie_name = "__Host-session_id",
    }

    token_exchange.on_request(request_handle, config)
```

Keep in mind that:

- `authtool-bff` is the name of the microservice associated with the `authtool_bff`
  confidential client in your project
- The `authtool_bff` API is served under a `/bff/` path prefix
- The cookie name must match your `sessionIdHardening` setting (here, `__Host-session_id`)

Token validation is handled by the [JwtAuthentication filter](https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/jwt_authn_filter),
which verifies JWT signatures against your AS / OpenID Provider public key or JWK Set.

Add a filter in `http-filters.yaml` as in the following non-normative example:

```yaml
- listener_name: frontend
  order: 65
  name: envoy.filters.http.jwt_authn
  typed_config:
    "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
    providers:
      "<provider_name>":
        issuer: "<issuer_url>"
        audiences: [
          # your token audiences
        ]
        remote_jwks:
          http_uri:
            uri: "<authorization_server_uri>"
            cluster: "<authorization_server_cluster>"
            timeout: 1s
        #
        # refer to envoy documentation to
        # decide how to handle to token after validation,
        # for instance:
        #
        forward: false
        forward_payload_header: x-jwt-payload
        #
    rules: [
      # add rules to match
      # the part of the API
      # that must be Authorized by
      # a valid token Authorization header
      #
      # for instance:
      #
      - match:
          prefix: "/api"
        requires:
          provider_name: "<provider_name>"
    ]
```

Finally, add the issuer as a cluster in `clusters.yaml` as in
the following non-normative example:

```yaml
- "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
  name: "<authorization_server_cluster>"
  connect_timeout: 30s
  type: LOGICAL_DNS
  lb_policy: ROUND_ROBIN
  dns_lookup_family: V4_ONLY
  load_assignment:
    cluster_name: "<authorization_server_cluster>"
    endpoints:
    - lb_endpoints:
      - endpoint:
          address:
            socket_address:
              address: "<address>"
              port_value: 443
  #
  # handle TLS here:
  #
  transport_socket:
    name: envoy.transport_sockets.tls
    typed_config:
      '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
      common_tls_context:
        validation_context:
          trusted_ca:
            filename: /etc/ssl/certs/ca-certificates.crt
```

## BFF

The BFF is implemented by a service called `authtool_bff`, available as an OCI image:

```text
<image_registry_domain>/platform/auth/authtool/authtool_bff:<tag>
```

The full configuration schema is available on
[Mia CDN](https://cdn.mia-platform.eu/runtime/platform/auth/authtool/authtool-bff/0.2.2/authtool_bff.schema.json)
and rendered below:

<SchemaViewer schema={Schema} example={Example} />

Architecturally, `authtool_bff` interacts with four components:

- **Session** — browser cookie
- **Cache** — token storage (Redis)
- **Client** — HTTP calls to the Authorization Server
- **REST API server** — exposes endpoints to the frontend

```mermaid
flowchart LR
    U["Browser"] -->|"session cookie"| BFF["authtool-bff"]
    BFF -->|"OAuth2 Code Flow"| AS["Authorization Server"]
    BFF -->|"store/retrieve tokens"| R[("Redis")]
    BFF -->|"Set-Cookie"| U
```

### Session Management

The `session` configuration block controls how `authtool-bff` creates, secures, and maintains the cookie-based session with the browser.

#### Cookie Creation

When the OAuth2 callback completes, the BFF sets a session cookie. The `mode` property determines how:

- **`bff`** — the cookie carries only an opaque session ID; tokens never reach the browser
- **`tokenMediation`** *(default)* — the cookie still maintains the session, but a short-lived access token can be returned to JavaScript

Cookie attributes are configured under `mode`:

```json
{
  "session": {
    "mode": {
      "type": "bff",
      "sessionIdHardening": "host",
      "sameSite": "strict",
      "secure": true,
      "http_only": true,
      "path": "/",
      "domain": null,
      "partitioned": false,
      "expirationSecs": 3600
    }
  }
}
```

This produces a cookie like:

```
Set-Cookie: __Host-session_id=<opaque>; HttpOnly; Secure; SameSite=Strict; Path=/
```

#### Cookie Hardening

The `sessionIdHardening` field controls the cookie name prefix (defaults to `host`):

| Value    | Cookie name prefix | Effect                                                  |
|----------|-------------------|---------------------------------------------------------|
| `host`   | `__Host-`          | Forces `Secure`, `Path=/`, no `Domain` *(default)*     |
| `secure` | `__Secure-`        | Forces `Secure`                                        |
| `none`   | *(no prefix)*      | No enforcement, useful for local development over HTTP |

:::info
The `http_only` cookie attribute defaults to `true` but can only be set to `false` in **debug builds**.
In release builds it is always enforced to `true`.
:::

#### Cookie Signing and Token Encryption

Two keys protect session integrity and token storage:

```json
{
  "session": {
    "signingKey": { "type": "env", "key": "SESSION_SIGNING_KEY" },
    "encryptionKey": { "type": "env", "key": "SESSION_ENCRYPTION_KEY" },
    "encryptAccessToken": true
  }
}
```

- **`signingKey`** — signs the cookie value so the BFF can detect tampering
- **`encryptionKey`** — encrypts **both** access tokens and refresh tokens at rest in Redis
- **`encryptAccessToken`** — can be set to `false` to skip AT encryption for performance when tokens are short-lived (default: `true`)

#### Token Storage and Expiration

The BFF stores tokens in Redis and controls their lifecycle.
Three distinct time boundaries govern how long a user stays authenticated; each maps to a BFF or Authorization Server (AS) setting:

| # | Time boundary | Where it is set | BFF configuration field | Typical value |
|---|---|---|---|---|
| 1 | **Access Token (AT) expiration** | AS client settings | — *(no BFF config needed)* | 5 – 15 min |
| 2 | **Refresh Token (RT) idle / max time** (SSO idle timeout) | AS client settings | `refreshTokenExpirationSecs` or `refreshTokenExpirationPayloadField` | hours to days |
| 3 | **Cookie max time** (SSO session max) | BFF + AS client settings | `mode.expirationSecs` | hours to days |

:::caution
These values **must be aligned** with the corresponding settings on the Authorization Server client registration.
A mismatch (e.g. a cookie that outlives the RT) will cause silent session failures.
:::

##### 1. Access Token Expiration

The AT lifetime is controlled entirely by the Authorization Server.
The BFF honours whatever `exp` claim the AS puts in the token — no additional configuration is required.
The only related BFF setting is `sessionJitterSecs` (default: `7`), which subtracts a few seconds from the AT expiry so that the BFF refreshes the token before it expires mid-flight.

##### 2. Refresh Token Expiration

The RT determines how long the BFF can silently renew access tokens on behalf of the user.
This corresponds to the **SSO idle timeout** (or SSO idle max) on the AS.

The BFF needs to know the RT lifetime so that it can set the correct TTL on the Redis entry.
There are two options:

- **The token response includes the RT expiration** — some providers return a field in the token response with the RT expiration (this is *not* mandated by the OAuth 2.0 spec).
  Set `refreshTokenExpirationPayloadField` to the name of that field and the BFF will read the value automatically:

  ```json
  {
    "session": {
      "refreshTokenExpirationPayloadField": "refresh_token_expires_in"
    }
  }
  ```

- **Set it manually** — when the AS does not include the RT expiration in the response, you must configure it by hand.
  Set `refreshTokenExpirationSecs` to match the RT lifetime configured on the AS (default: 7 days / `604800`):

  ```json
  {
    "session": {
      "refreshTokenExpirationSecs": 604800
    }
  }
  ```

If both fields are set, the value from the token response (`refreshTokenExpirationPayloadField`) takes precedence.

##### 3. Cookie (Session) Expiration

The cookie `expirationSecs` field inside `mode` controls how long the browser keeps the session cookie.
It is good practice to align this value with the **SSO session max** configured on the AS so that the cookie and the server-side session expire at the same time.

```json
{
  "session": {
    "mode": {
      "type": "bff",
      "expirationSecs": 86400
    }
  }
}
```

##### Refresh Token Rotation

When `refreshTokenRotation` is set to `true`, each token refresh issues a new RT and invalidates the previous one.
This must match the AS client configuration — enable it only if the AS is configured for RT rotation.

The `authtool_bff` service protects refresh-token operations with an internal lock to prevent race conditions (e.g. two concurrent requests attempting to refresh the same token simultaneously).
This lock is **process-local**, which is sufficient for multi-replica deployments **as long as rotation is disabled** (`refreshTokenRotation: false`), because re-using the same RT is idempotent.

:::warning
When **refresh token rotation is enabled**, the service **must run as a single replica**.
With rotation, each RT can only be used once — if two replicas attempt to refresh concurrently, one will receive a `400` error from the Authorization Server (the RT has already been consumed and invalidated), causing the BFF to destroy the session and force the user to re-authenticate.
:::

##### Full Example

```json
{
  "session": {
    "authorizationFlowCache": { "connectionName": "redis-session" },
    "refreshTokenExpirationSecs": 604800,
    "refreshTokenRotation": false,
    "sessionJitterSecs": 7
  }
}
```

- **`authorizationFlowCache`** — points to a Redis connection either by reference (`connectionName`) or inline Redis config, where tokens and authorization state are persisted
- **`refreshTokenExpirationSecs`** — TTL for stored refresh tokens (default: 7 days / `604800`); should match the AS RT lifetime
- **`refreshTokenRotation`** — when `true`, each refresh issues a new RT and invalidates the old one (default: `false`); must match the AS client setting
- **`refreshTokenExpirationPayloadField`** — optional key in the token response containing the RT expiration (not mandated by OAuth 2.0 spec)
- **`sessionJitterSecs`** — subtracts seconds from token expiry to avoid using tokens that expire mid-flight (default: `7`)

Redis client prefixes keys with a namespace from `connections.<name>.namespace`.

When multiple sessions are needed for different OAuth 2.x clients (different Client IDs), the
same Redis instance can be used with the same namespace (defaults to `authtool_bff`).

Otherwise, the namespace can be used to separate keys on the same Redis instance.

#### Subsequent Requests

On every request carrying the session cookie:

1. BFF verifies the cookie signature using `signingKey`
2. Looks up the session in Redis
3. Decrypts the stored access token using `encryptionKey`
4. If the AT is expired (minus jitter), uses the RT to refresh
5. Returns the valid AT (in BFF mode, only internally; in token mediation mode, to the caller)

#### User Claims

The `userClaims` array selects which ID token claims are stored in the session and exposed via `/session`:

```json
{
  "session": {
    "userClaims": ["email", "name", "picture"]
  }
}
```

Defaults to `["email"]`.

#### Error Handling

The `errorRedirects` field accepts a URL where users are redirected when session or token errors occur:

```json
{
  "session": {
    "errorRedirects": "https://mydomain.com/error"
  }
}
```

### OpenID Connect Integration

The `authtool_bff` acts as an OAuth 2.0 confidential client that manages the Authorization Code flow with an external Identity Provider (IdP) or Authorization Server (AS). The BFF securely stores tokens and user claims in the session, never exposing sensitive material to the browser.

**Configuration options:**

- **Issuer and Metadata Discovery:**  
  The `issuer` field specifies the base URL of the IdP/AS. The `issuerMetadataSegment` (default: `/.well-known/openid-configuration`) is appended to discover OIDC endpoints automatically.

- **Client Registration:**  
  The `clientId`, `redirect_uri`, and `credentials` fields register the BFF as an OIDC client. Credentials can be a client secret or a private key.

- **Scopes and Extra Parameters:**  
  The `scope` field defines requested scopes (e.g., `openid`, `profile`, `email`). The `extra` field allows custom query parameters (e.g., `audience` for Auth0).

- **Token Endpoint Authentication:**  
  The `preferredTokenEndpointAuthMethod` and `preferredTokenEndpointSigningAlgorithm` fields let you override the default authentication and signing algorithms, supporting providers with non-standard requirements.

- **ID Token Validation:**  
  The `idTokenValidationIssuer` field allows custom issuer validation, useful when the IdP issues tokens with a different issuer than advertised in metadata.

- **Logout Flow:**  
  The `postLogoutRedirectUri` field enables OIDC-compliant logout, redirecting users to a registered URI after logging out at the IdP.

**How OIDC integrates with session management:**

- After successful authentication, the BFF stores access and refresh tokens (encrypted) in Redis and sets a secure, signed session cookie.
- User claims from the ID token (as configured in `userClaims`) are extracted and exposed via the `/session` endpoint.
- The session lifecycle (creation, refresh, expiration, logout) is managed transparently using OIDC endpoints.
- All sensitive operations (token exchange, refresh, logout) happen server-side.

### Multi-Client Configuration

A single BFF instance can serve multiple OAuth 2.0 clients. This is useful when multiple
frontend applications share the same Authorization Server but require separate client registrations
with different redirect URIs, scopes, or credentials.

#### Single Client (default)

When only one client is needed, configure it directly as an object under `$.client`:

```json
{
  "client": {
    "issuer": "https://idp.example.com",
    "clientId": "my-app",
    "redirect_uri": "https://app.example.com/oauth/callback",
    "scope": "openid profile email",
    "credentials": { "..." : "..." },
    "postLogoutRedirectUri": "https://app.example.com/oidc/logout/callback"
  }
}
```

#### Multiple Clients

Configure multiple clients as an array under `$.client.clients`. Exactly one client
must be marked as `"default": true`:

```json
{
  "client": {
    "issuer": "https://idp.example.com",
    "clients": [
      {
        "default": true,
        "clientId": "main-app",
        "redirect_uri": "https://app.example.com/oauth/callback",
        "scope": "openid profile email",
        "credentials": { "..." : "..." },
        "postLogoutRedirectUri": "https://app.example.com/oidc/logout/callback"
      },
      {
        "clientId": "admin-app",
        "redirect_uri": "https://admin.example.com/oauth/callback",
        "scope": "openid profile email",
        "credentials": { "..." : "..." },
        "postLogoutRedirectUri": "https://admin.example.com/oidc/logout/callback"
      }
    ]
  }
}
```

All clients share the same `issuer` and the same session cookie. Token storage is
keyed by `(session_id, client_id)`, so each client maintains independent tokens.

The target client is selected via the `?client_id=<id>` query parameter on
`/login`, `/logout`, `/session`, and `/token` endpoints. When the parameter is omitted
the default client is used.

:::tip
All clients must be registered on the **same Authorization Server** (same `issuer`).
If you need to integrate with different identity providers, deploy separate BFF instances.
:::

#### Envoy Routing for Multi-Client

The BFF selects the target client based on the `?client_id=<id>` query parameter.
Since the frontend library is client-ID agnostic, the parameter must be injected at
the API gateway level before requests reach the BFF.

There are several techniques to achieve this in Envoy, depending on how your
frontend applications are separated.

##### Option 1: Virtual hosts (domain-based separation)

When each frontend application is served on a different domain (e.g.,
`app.example.com` and `admin.example.com`), you can use Envoy
[virtual hosts](https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/route/v3/route_components.proto#config-route-v3-virtualhost)
to match on the `:authority` (Host) header and inject the correct `client_id`
per domain.

Each virtual host has its own set of routes and per-route Lua configuration:

```yaml
# route configuration
virtual_hosts:
  # default frontend — no client_id injection needed
  - name: main-app
    domains: ["app.example.com"]
    routes:
      - match:
          prefix: /bff
        route:
          cluster: "authtool-bff"
          timeout: "0s"
        typed_per_filter_config:
          envoy.filters.http.lua:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
            disabled: true

  # admin frontend — inject client_id=admin-app
  - name: admin-app
    domains: ["admin.example.com"]
    routes:
      - match:
          prefix: /bff
        route:
          cluster: "authtool-bff"
          timeout: "0s"
        typed_per_filter_config:
          envoy.filters.http.lua:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
            source_code:
              inline_string: |
                package.path = '/etc/lua/lib/?.lua;' .. package.path
                local inject = require('client-id-inject')
                inject.inject(request_handle, "admin-app")
```

When the BFF sits behind a load balancer or reverse proxy, the proxy must
forward the original `Host` header (or set `x-forwarded-host`). Envoy
matches virtual hosts on the `:authority` pseudo-header, which is the `Host`
header in HTTP/1.1.

##### Option 2: Listener-based separation

If each frontend application is exposed on a different port or network
interface, use separate Envoy listeners. Each listener can carry its own
`on-request-scripts.yaml` entry that injects the right `client_id`:

```yaml
# on-request-scripts.yaml — admin frontend on a separate listener
- listener_name: admin
  body: |-
    package.path = '/etc/lua/lib/?.lua;' .. package.path

    local inject = require('client-id-inject')
    inject.inject(request_handle, "admin-app")

    local token_exchange = require('token-exchange')
    local config = {
      token_service_cluster = "authtool-bff",
      token_service_endpoint = "/bff/token",
      session_cookie_name = "__Host-session_id",
    }
    token_exchange.on_request(request_handle, config)
```

##### Option 3: Path-prefix discrimination

If all frontends share the same domain and listener, you can
differentiate by path prefix. For example, serve the admin app under
`/admin/` and rewrite BFF paths accordingly:

```yaml
# endpoints.yaml — admin app routes to BFF with client_id
- listener_name: frontend
  match:
    prefix: /admin/bff/
  route:
    regex_rewrite:
      pattern:
        regex: "^/admin/bff/(.*)"
      substitution: "/bff/\\1"
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      source_code:
        inline_string: |
          package.path = '/etc/lua/lib/?.lua;' .. package.path
          local inject = require('client-id-inject')
          inject.inject(request_handle, "admin-app")
```

##### Lua helper

All options above use the same `client-id-inject.lua` helper, which can be
mounted alongside the token-exchange filter in `/etc/lua/lib`:

```lua
-- /etc/lua/lib/client-id-inject.lua

local M = {}

--- Appends `client_id=<value>` to the current request query string.
--- If the request already contains a `client_id` parameter it is left unchanged.
function M.inject(request_handle, client_id)
  local path = request_handle:headers():get(":path")
  if not path then return end

  -- skip if client_id is already present
  if path:find("[?&]client_id=") then return end

  local sep = path:find("?") and "&" or "?"
  request_handle:headers():replace(":path", path .. sep .. "client_id=" .. client_id)
end

return M
```

##### Which endpoints need `client_id`

The endpoints that require `client_id` injection are:

| Endpoint | Purpose |
|---|---|
| `/login` | Initiates the authorization code flow for the correct client |
| `/logout` | Removes the correct client's tokens and redirects to AS |
| `/session` | Checks whether a session exists for the correct client |
| `/token` | Exchanges the session cookie for the correct client's access token |

Endpoints that do **not** need `client_id` (they work across all clients):

| Endpoint | Purpose |
|---|---|
| `/oauth/callback` | The BFF resolves the client from the stored authorization state |
| `/oidc/logout/callback` | Post-logout redirect, no client selection needed |
| `/oidc/logout/backchannel` | Validates against all configured client IDs |
| `/.well-known/jwks.json` | Shared public keys |

:::tip
The default client does not need `client_id` injection — when the parameter is absent
the BFF falls back to the client marked `"default": true`. You only need the inject
script for non-default frontends.
:::

### Back-Channel Logout

The BFF supports [OpenID Connect Back-Channel Logout 1.0](https://openid.net/specs/openid-connect-backchannel-1_0.html),
allowing the Authorization Server to terminate sessions server-to-server.

To enable back-channel logout, register the BFF's backchannel logout URL on the
Authorization Server client configuration:

| AS Setting | Value |
|---|---|
| Backchannel Logout URL | `https://<bff-host>/bff/oidc/logout/backchannel` |
| Backchannel Logout Session Required | `true` (recommended) |

When using `private_key_jwt` authentication, the AS needs access to the BFF's
public keys. Configure the JWKS URL on the AS client:

| AS Setting | Value |
|---|---|
| JWKS URL | `https://<bff-host>/bff/.well-known/jwks.json` |

When a logout token is received, the BFF validates the JWT against all configured
client IDs, resolves the browser session from the `sid` (or `sub`) claim, and
atomically deletes all stored tokens for that session — including tokens for all
clients in a multi-client setup.

:::caution
The `/oidc/logout/backchannel` endpoint must be reachable by the Authorization Server.
In environments where the BFF is behind a firewall, ensure the AS can reach this
endpoint via the internal network.
:::

### Redis Integration

The BFF uses Redis as a centralized cache for session data, access tokens, and refresh tokens. The `authorizationFlowCache` field in the session configuration references a Redis connection, either by name or inline.

- **Token Storage:**  
  Access and refresh tokens are encrypted and stored in Redis, keyed by the session identifier.
- **Session Lookup:**  
  On each request, the BFF retrieves and decrypts session data from Redis to validate and refresh tokens as needed.
- **Configuration:**  
  Redis connections are defined in the `connections` block and referenced via `authorizationFlowCache`.

This design supports horizontal scaling, as all BFF instances share the same session store.

### Server Settings

The `server` section configures the BFF REST API server:

- **Listening Address and Port:**  
  Controls which network interface and port the BFF binds to, suitable for deployment behind a reverse proxy or API gateway.
- **API Prefix:**  
  The `apiPrefix` setting groups all BFF endpoints under a common URL path (e.g., `/bff/`), simplifying routing and API gateway integration.

### BFF Key Setup Script

The `setup_bff_keys.sh` script automates the generation of cryptographic keys required by the BFF for cookie signing and token encryption.

The script generates values for the `SESSION_SIGNING_KEY` and `SESSION_ENCRYPTION_KEY` environment variables, which the BFF configuration references to sign session cookies and encrypt tokens at rest in Redis.

You can download the latest version of the script using:

```shell
version=latest
curl -o setup_bff_keys.sh "https://cdn.mia-platform.eu/runtime/platform/auth/authtool/authtool_bff/${version}/setup_bff_keys.sh"

# enable execution
chmod +x setup_bff_keys.sh
```

### Private Key / Public Key for `private_key_jwt` Assertion

When configuring the BFF to use `private_key_jwt` authentication, the client proves its identity by signing a JWT with its private key instead of sending a client secret. The Authorization Server verifies the JWT using the registered public key.

**How it works:**
- The private key is referenced in the configuration under `credentials` (type: `privateKey`).
- During the token exchange, the BFF creates and signs a JWT assertion, presenting it to the token endpoint as proof of identity.
- The Authorization Server must have the matching public key registered for the client.

**Key points:**
- This method is more secure than a client secret because the private key never leaves the BFF.
- The private key should be generated and stored securely, using the `setup_bff_keys.sh` script or a similar process.
- The public key must be registered with the IdP during client registration.

**Example configuration snippet:**
```json
{
  "client": {
    "credentials": {
      "privateKey": {
        "type": "file",
        "path": "/path/to/key.pem"
      }
    },
    "preferredTokenEndpointAuthMethod": "private_key_jwt"
  }
}
```

This setup provides strong asymmetric authentication between the BFF and the Authorization Server.

### Endpoint Rewrites

Due to how the **Mia Platform** Console manages Envoy routing, every BFF route must be explicitly declared in the `endpoints.yaml` advanced configuration file. Each route needs both a `path` match (exact) and a `prefix` match (with trailing slash) to handle requests correctly.

All BFF routes must disable the Lua token-exchange filter, since these endpoints handle authentication themselves and must not go through the token-exchange pipeline. Depending on your setup, you may also need to disable `jwt_authn` (when JWT validation covers the whole listener) and/or `ext_authz` (when external authorization is active).

Add the following entries to `endpoints.yaml`:

```yaml
## BFF ##

### login
- listener_name: frontend
  match:
    prefix: /bff/login/
  route:
    prefix_rewrite: /bff/login/
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      disabled: true
    # activate when jwt_authn covers the whole listener
    # envoy.filters.http.jwt_authn:
    #   "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
    #   disabled: true
    # activate when ext_authz is active
    # envoy.filters.http.ext_authz:
    #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
    #   disabled: true
- listener_name: frontend
  match:
    path: /bff/login
  route:
    prefix_rewrite: /bff/login
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      disabled: true
    # activate when jwt_authn covers the whole listener
    # envoy.filters.http.jwt_authn:
    #   "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
    #   disabled: true
    # activate when ext_authz is active
    # envoy.filters.http.ext_authz:
    #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
    #   disabled: true

### logout
- listener_name: frontend
  match:
    prefix: /bff/logout/
  route:
    prefix_rewrite: /bff/logout/
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      disabled: true
    # activate when jwt_authn covers the whole listener
    # envoy.filters.http.jwt_authn:
    #   "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
    #   disabled: true
    # activate when ext_authz is active
    # envoy.filters.http.ext_authz:
    #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
    #   disabled: true
- listener_name: frontend
  match:
    path: /bff/logout
  route:
    prefix_rewrite: /bff/logout
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      disabled: true
    # activate when jwt_authn covers the whole listener
    # envoy.filters.http.jwt_authn:
    #   "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
    #   disabled: true
    # activate when ext_authz is active
    # envoy.filters.http.ext_authz:
    #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
    #   disabled: true

### oidc/logout/callback
- listener_name: frontend
  match:
    prefix: /bff/oidc/logout/callback/
  route:
    prefix_rewrite: /bff/oidc/logout/callback/
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      disabled: true
    # activate when jwt_authn covers the whole listener
    # envoy.filters.http.jwt_authn:
    #   "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
    #   disabled: true
    # activate when ext_authz is active
    # envoy.filters.http.ext_authz:
    #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
    #   disabled: true
- listener_name: frontend
  match:
    path: /bff/oidc/logout/callback
  route:
    prefix_rewrite: /bff/oidc/logout/callback
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      disabled: true
    # activate when jwt_authn covers the whole listener
    # envoy.filters.http.jwt_authn:
    #   "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
    #   disabled: true
    # activate when ext_authz is active
    # envoy.filters.http.ext_authz:
    #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
    #   disabled: true

### session
- listener_name: frontend
  match:
    prefix: /bff/session/
  route:
    prefix_rewrite: /bff/session/
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      disabled: true
    # activate when jwt_authn covers the whole listener
    # envoy.filters.http.jwt_authn:
    #   "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
    #   disabled: true
    # activate when ext_authz is active
    # envoy.filters.http.ext_authz:
    #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
    #   disabled: true
- listener_name: frontend
  match:
    path: /bff/session
  route:
    prefix_rewrite: /bff/session
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      disabled: true
    # activate when jwt_authn covers the whole listener
    # envoy.filters.http.jwt_authn:
    #   "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
    #   disabled: true
    # activate when ext_authz is active
    # envoy.filters.http.ext_authz:
    #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
    #   disabled: true

### oauth/callback
- listener_name: frontend
  match:
    prefix: /bff/oauth/callback/
  route:
    prefix_rewrite: /bff/oauth/callback/
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      disabled: true
    # activate when jwt_authn covers the whole listener
    # envoy.filters.http.jwt_authn:
    #   "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
    #   disabled: true
    # activate when ext_authz is active
    # envoy.filters.http.ext_authz:
    #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
    #   disabled: true
- listener_name: frontend
  match:
    path: /bff/oauth/callback
  route:
    prefix_rewrite: /bff/oauth/callback
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      disabled: true
    # activate when jwt_authn covers the whole listener
    # envoy.filters.http.jwt_authn:
    #   "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
    #   disabled: true
    # activate when ext_authz is active
    # envoy.filters.http.ext_authz:
    #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
    #   disabled: true

### oidc/logout/backchannel
- listener_name: frontend
  match:
    prefix: /bff/oidc/logout/backchannel/
  route:
    prefix_rewrite: /bff/oidc/logout/backchannel/
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      disabled: true
    # activate when jwt_authn covers the whole listener
    # envoy.filters.http.jwt_authn:
    #   "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
    #   disabled: true
    # activate when ext_authz is active
    # envoy.filters.http.ext_authz:
    #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
    #   disabled: true
- listener_name: frontend
  match:
    path: /bff/oidc/logout/backchannel
  route:
    prefix_rewrite: /bff/oidc/logout/backchannel
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      disabled: true
    # activate when jwt_authn covers the whole listener
    # envoy.filters.http.jwt_authn:
    #   "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
    #   disabled: true
    # activate when ext_authz is active
    # envoy.filters.http.ext_authz:
    #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
    #   disabled: true

### .well-known/jwks.json
- listener_name: frontend
  match:
    path: /bff/.well-known/jwks.json
  route:
    prefix_rewrite: /bff/.well-known/jwks.json
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      disabled: true
    # activate when jwt_authn covers the whole listener
    # envoy.filters.http.jwt_authn:
    #   "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
    #   disabled: true
    # activate when ext_authz is active
    # envoy.filters.http.ext_authz:
    #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
    #   disabled: true
```

:::tip
Each route requires **two entries** — one with `path` (exact match) and one with `prefix` (trailing slash) — to ensure that both `/bff/login` and `/bff/login/?redirect_uri=...` are routed correctly.
:::

### Alternative: Cluster-Based Routing

Instead of declaring every BFF route individually in `endpoints.yaml`, you can skip the Console [Endpoints](/products/console/api-console/api-design/endpoints.md) section entirely and route all `/bff` traffic through a single catch-all entry. This approach requires three steps:

**1. Do not create a BFF endpoint in the Console Design section**

The `authtool-bff` microservice should still be deployed in your project, but you should **not** create an endpoint for it in the Console's **Design > Endpoints** section. Routing will be handled entirely via Envoy advanced configuration.

**2. Add the `authtool-bff` cluster in `clusters.yaml`**

Since the Console is not managing the endpoint, you need to register the BFF as an Envoy cluster manually:

```yaml
- "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
  name: "authtool-bff"
  connect_timeout: 30s
  type: LOGICAL_DNS
  lb_policy: ROUND_ROBIN
  dns_lookup_family: V4_ONLY
  load_assignment:
    cluster_name: "authtool-bff"
    endpoints:
    - lb_endpoints:
      - endpoint:
          address:
            socket_address:
              address: "authtool-bff"
              port_value: 3000
```

Adjust `address` and `port_value` to match your service name and listening port.

**3. Add a single `/bff` prefix route in `endpoints.yaml`**

Instead of one entry per BFF route, add a single prefix match that catches all `/bff` traffic:

```yaml
## BFF (catch-all)
- listener_name: frontend
  match:
    prefix: /bff
  route:
    prefix_rewrite: /bff
    cluster: "authtool-bff"
    timeout: "0s"
  typed_per_filter_config:
    envoy.filters.http.lua:
      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
      disabled: true
    # activate when jwt_authn covers the whole listener
    # envoy.filters.http.jwt_authn:
    #   "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
    #   disabled: true
    # activate when ext_authz is active
    # envoy.filters.http.ext_authz:
    #   "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
    #   disabled: true
```

This single entry replaces all the per-route declarations from the previous section. The trade-off is that the BFF service is not visible in the Console's Endpoints UI, and any future BFF routes are automatically covered without configuration changes.
